--- a/index.html
+++ b/index.html
@@ -1,13 +1,42 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>How Well Do You Know Basic Coding?</title>
+    <title>Coding 101 Quiz</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="Assets/style.css" />
   </head>
-  
   <body>
+    <header>
+      <div class="large-font"><h1>Coding 101 Quiz</h1></div>
+      <button class="start-button">Start</button>
+    </header>
+
+    <main>
+      <section>
+        <div class="card quiz-question">
+        </div>
+      </section>  
+    
+      <section>
+        <div class="card results">
+          <div class="win-loss-container">
+          <div>
+          <h2>Wins: <span class="win">0 </span></h2>
+          <h2>Losses: <span class="lose">0 <span></h2>  
+        </div>
+          <button class="reset-button">Reset Score</button>
+      </div>
+          <div class="card timer">
+            <div class="timer-text">
+            <div clas="large-font timer-count">10</div>  
+            <h3>seconds remaining</h3>  
+          </div>
+          
+          </div>
+        </div>
+      </section>
+    </main>
   <script src="assets/js/script.js"></script>
   </body>
 </html>
