--- a/index.html
+++ b/index.html
@@ -12,51 +12,50 @@
 
   <header>
     <div class="top-line">
-      <p><span class="view-highscores">View High Scores</span></p>
-      <p>Time:<span class="timer-count"> 60</span></p>
+      <!-- <p><span class="view-highscores">View High Scores</span></p>
+      <p>Time:<span class="timer-count"> 60</span></p> -->
     </div>
   </header>
 
   <main>
     <section>
-      <!-- <div> -->
-      <ul id="questions">
-        <li>
-          <h1 id="quiz-title">Coding 101</h1>
-        </li>
-        <li>What do you know about coding? Take this short quiz to find out!</li>
-        <li>For each wrong answer you will lose 10 of your 60 seconds.</li>
-        <li>Answer all 3 multiple choice questions before time runs out!</li>
-      </ul>
-      <!-- </div> -->
-      <div class="center-button">
-        <button class="start-button">Start</button>
-      </div>
+      <div class="quiz-container" id="quiz">
+        <div class="quiz-header">
+          <h1 id="question">Question is loading...</h1>
+        </div> 
+          <ul>
+            <li>
+              <input type="radio" name="answer" id="a" class="answer" />
+              <label for="a" id="a_text">Answer...</label>
+            </li>
+            <li>
+              <input type="radio" name="answer" id="b" class="answer" />
+              <label for="b" id="b_text">Answer...</label>
+            </li>
+            <li>
+              <input type="radio" name="answer" id="c" class="answer" />
+              <label for="c" id="c_text">Answer...</label>
+            </li>
+          </ul>
+          <button id="submit">Submit</button>
       </div>
     </section>
   </main>
-
-  <!-- <button <span 
-  onclick="this.parentNode.style.display='none';"
-  class="start-button">Start
-  </span>
-  </button> -->
-
   <script src="Assets/script.js"></script>
 </body>
 
 </html>
 
-<!-- <p>What do you know about coding? Take this short quiz to find out!<p>
-  <p>For each wrong answer you will lose 10 of your 60 seconds.</p>
-  <p>Answer all 3 multiple choice questions before time runs out!</p> -->
 
-<!-- <div id="coding-quiz">
-    <h1>Coding 101</h1>
-  </div>
-   <div>
-  <ul id="questions">
-    <li>What do you know about coding? Take this short quiz to find out!</li>
-    <li>For each wrong answer you will lose 10 of your 60 seconds.</li>
-    <li>Answer all 3 multiple choice questions before time runs out!</li>
-  </ul> -->
+<!-- List of instructions that can turned into question and answers? -->
+
+<!-- <ul id="questions">
+  <li>
+    <h1 id="title">Coding 101</h1>
+  </li>
+  <li id="choice1">What do you know about coding? Take this short quiz to find out!</li>
+  <li id="choice2">For each wrong answer you will lose 10 of your 60 seconds.</li>
+  <li id="choice3">Answer all 3 multiple choice questions before time runs out!</li>
+</ul>
+<div class="center-button">
+        <button class="start-button">Start</button>-->
