presents user with next question and timer seems to be working

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
   <header>
     <div class="top-line">
-      <!-- <p><span class="view-highscores">View High Scores</span></p>
-      <p>Time:<span class="timer-count"> 60</span></p> -->
+      <!-- <p><span class="view-highscores">View High Scores</span></p> -->
+      <p>Time: <span id="timer-count">60</span></p>
     </div>
   </header>
 
