restructured code to make it cleaner and added JavaScript logic

--- a/index.html
+++ b/index.html
@@ -21,23 +21,26 @@
     <section>
       <div class="quiz-container" id="quiz">
         <div class="quiz-header">
-          <h1 id="question">Question is loading...</h1>
-        </div> 
-          <ul>
-            <li>
-              <input type="radio" name="answer" id="a" class="answer" />
-              <label for="a" id="a_text">Answer...</label>
-            </li>
-            <li>
-              <input type="radio" name="answer" id="b" class="answer" />
-              <label for="b" id="b_text">Answer...</label>
-            </li>
-            <li>
-              <input type="radio" name="answer" id="c" class="answer" />
-              <label for="c" id="c_text">Answer...</label>
-            </li>
-          </ul>
-          <button id="submit">Submit</button>
+          <h1 id="question">Coding 101</h1>
+        </div>
+        <ul>
+          <li id="a_text" class="answer">
+            What do you know about coding? Take this short quiz to find out!
+            <!-- <input type="radio" name="answer" id="a" class="answer" /> -->
+            <!-- <label for="a" id="a_text"></label> -->
+          </li>
+          <li id="b_text" class="answer">
+            For each wrong answer you will lose 10 of your 60 seconds.
+            <!-- <input type="radio" name="answer" id="b" class="answer" />
+            <label for="b" id="b_text"></label> -->
+          </li>
+          <li id="c_text" class="answer">
+            Answer all 3 multiple choice questions before time runs out!
+            <!-- <input type="radio" name="answer" id="c" class="answer" />
+            <label for="c" id="c_text"></label> -->
+          </li>
+        </ul>
+        <button class="start-button">Start</button>
       </div>
     </section>
   </main>
@@ -46,16 +49,6 @@
 
 </html>
 
+<!-- <div class="center-button"> </div> Is this styling for the button needed?-->
 
-<!-- List of instructions that can turned into question and answers? -->
-
-<!-- <ul id="questions">
-  <li>
-    <h1 id="title">Coding 101</h1>
-  </li>
-  <li id="choice1">What do you know about coding? Take this short quiz to find out!</li>
-  <li id="choice2">For each wrong answer you will lose 10 of your 60 seconds.</li>
-  <li id="choice3">Answer all 3 multiple choice questions before time runs out!</li>
-</ul>
-<div class="center-button">
-        <button class="start-button">Start</button>-->
+<!-- <button id="submit">Submit</button> -->
