added functions for correct and incorrect and working on end of game initials page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <header>
     <div class="top-line">
-      <!-- <p><span class="view-highscores">View High Scores</span></p> -->
+      <p><span class="view-highscores">View High Scores</span></p>
       <p>Time: <span id="timer-count">60</span></p>
     </div>
   </header>
@@ -26,21 +26,16 @@
         <ul>
           <li id="a_text" class="answer">
             What do you know about coding? Take this short quiz to find out!
-            <!-- <input type="radio" name="answer" id="a" class="answer" /> -->
-            <!-- <label for="a" id="a_text"></label> -->
           </li>
           <li id="b_text" class="answer">
             For each wrong answer you will lose 10 of your 60 seconds.
-            <!-- <input type="radio" name="answer" id="b" class="answer" />
-            <label for="b" id="b_text"></label> -->
           </li>
           <li id="c_text" class="answer">
             Answer all 3 multiple choice questions before time runs out!
-            <!-- <input type="radio" name="answer" id="c" class="answer" />
-            <label for="c" id="c_text"></label> -->
           </li>
         </ul>
         <button class="start-button">Start</button>
+        <div id="display-result"></div>
       </div>
     </section>
   </main>
